[package]
name = "remote-clipboard"
version = "0.1.2"
authors = ["Thomas Legris <legris.thomas@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A CLI tool to share content across different clients"
readme = "README.md"
homepage = "https://github.com/noboruma/rclip"
repository = "https://github.com/noboruma/rclip"
keywords = ["cli", "remote", "clipboard", "serverless"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking","json"] }
dotenv = "0.15.0"
dirs = "2.0.2"
url = "2.1.1"
mocktopus = "0.7.5"
