[package]
name = "remote-clipboard"
version = "0.3.1"
authors = ["Thomas Legris <legris.thomas@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A CLI tool to share content across different clients"
readme = "README.md"
homepage = "https://github.com/noboruma/rclip"
repository = "https://github.com/noboruma/rclip"
keywords = ["cli", "remote", "clipboard", "serverless"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.10", features = ["blocking","json"] }
dotenv = "0.15.0"
dirs = "2.0.2"
url = "2.1.1"
futures = "0.3"
mocktopus = "0.7.5"
base64 = "0.12.3"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
assert_cmd = "1.0.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
